crates/next-custom-transforms/tests/errors/server-actions/server-graph/20/input.js
export async function fn() {
  'use cache'
  'use server'
}
